# yt-dashbord-app

./: .cargo.sh  .gitignore  README.md  package.json  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/handlers/: mod.rs
src/assets/: notification-icon.icns
src/components/: Login.tsx
src/modules/: StatisticsController.tsx  VideosController.tsx  index.ts
src/pages/: index.tsx
src/pages/Home/: index.tsx
src/settings/: index.tsx
src/store/: User.ts  theme.tsx
src/tools/: machine_id.ts  notify.ts  socket.ts
