[package]
name = "ytviews"
version = "0.1.8"
description = "YTVIEWS Dashboard"
authors = ["@KM8Oz"]
license = "MIT"
repository = "https://github.com/KM8Oz/yt-dashbord-app.git"
default-run = "ytviews"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all", "macos-private-api"] }
tauri-plugin-store =  { git = "https://github.com/tauri-apps/tauri-plugin-store" }
tokio = { version = "1.24.2", features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
machine-uid = "0.2.0"
directories = "4.0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
